--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": "",
+  "repository": "git@github.com:evanshortiss/fh-health.git",
   "author": "Evan Shortiss",
   "license": "BSD",
   "dependencies": {
-    "async": "*"
+    "async": "*",
+    "request": "*"
   }
 }
