--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
   "name": "fh-health",
-  "version": "0.0.42",
+  "version": "0.0.5",
   "description": "A wrapper to add a health endpoint to your cloud application based on nodeapp.",
-  "main": "./index.js",
+  "main": "./lib/TestRunner.js",
   "scripts": {
-    "test": "mocha ./test.js"
+    "test": "grunt test"
   },
   "keywords": ["feedhenry", "fh", "fh-health", "health"],
   "repository": "git@github.com:evanshortiss/fh-health.git",
   "author": "Evan Shortiss",
   "dependencies": {
     "async": "0.2.9"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.5",
+    "grunt-lintspaces": "^0.5.1",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-column-lint": "~0.2.0",
+    "mocha": "~1.20.1",
+    "grunt-mocha-istanbul": "~1.4.1"
   }
 }
