--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fh-health",
-  "version": "0.0.6",
+  "version": "0.1.0",
   "description": "A wrapper to add a health endpoint to your cloud application based on nodeapp.",
   "main": "./lib/TestRunner.js",
   "scripts": {
@@ -16,8 +16,7 @@
   "author": "Evan Shortiss",
   "dependencies": {
     "async": "0.2.9",
-    "fhlog": "^0.12.1",
-    "winston": "^0.8.1"
+    "fhlog": "^0.12.1"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
