--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   ],
   "repository": "git@github.com:evanshortiss/fh-health.git",
   "author": "Evan Shortiss",
+  "license": "Apache-2.0",
   "dependencies": {
     "async": "0.2.9",
     "fhlog": "^0.12.1"
