--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.3.3",
   "description": "A wrapper to add a health endpoint to your cloud application based on nodeapp.",
   "main": "./lib/TestRunner.js",
-  "files": ["lib/"],
+  "files": [
+    "lib/"
+  ],
   "scripts": {
     "test": "grunt test"
   },
@@ -18,7 +20,8 @@
   "license": "Apache-2.0",
   "dependencies": {
     "async": "0.2.9",
-    "fhlog": "^0.13.1"
+    "fhlog": "^0.13.1",
+    "request": "2.88.0"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
